FIND_PACKAGE(PCL REQUIRED COMPONENTS common io visualization filters)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)

ADD_DEFINITIONS(${PCL_DEFINITIONS})
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS}
		    ${PYTHON_INCLUDE_DIRS})
LINK_LIBRARIES(${PCL_LIBRARY_DIRS})

ADD_EXECUTABLE(main main.cpp)

ADD_LIBRARY(slambase slambase.cpp)

TARGET_LINK_LIBRARIES(main slambase ${OpenCV_LIBS} ${PCL_FILTERS_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES})

